tests/api/reference/negative/14-match-input-type.asm
const invalid: map = match.tokens("value:name", 42)
